@@ -1,5 +1,5 @@
 /*
- * Copyright 2023-2025 the original author or authors.
+ * Copyright 2023-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,14 +16,13 @@
 
 package org.springframework.ai.bedrock.converse;
 
-import java.io.IOException;
-import java.io.InputStream;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.net.URLConnection;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Base64;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -33,41 +32,39 @@ import io.micrometer.observation.ObservationRegistry;
 import io.micrometer.observation.contextpropagation.ObservationThreadLocalAccessor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.ai.model.tool.DefaultToolExecutionEligibilityPredicate;
-import org.springframework.ai.model.tool.ToolCallingChatOptions;
-import org.springframework.ai.model.tool.ToolCallingManager;
-import org.springframework.ai.model.tool.ToolExecutionEligibilityPredicate;
-import org.springframework.ai.model.tool.ToolExecutionResult;
 import reactor.core.publisher.Flux;
-import reactor.core.publisher.Sinks;
-import reactor.core.publisher.Sinks.EmitFailureHandler;
 import reactor.core.scheduler.Schedulers;
 import software.amazon.awssdk.auth.credentials.AwsCredentialsProvider;
 import software.amazon.awssdk.core.SdkBytes;
 import software.amazon.awssdk.core.document.Document;
 import software.amazon.awssdk.core.exception.SdkClientException;
+import software.amazon.awssdk.http.apache.ApacheHttpClient;
 import software.amazon.awssdk.http.nio.netty.NettyNioAsyncHttpClient;
 import software.amazon.awssdk.regions.Region;
 import software.amazon.awssdk.regions.providers.DefaultAwsRegionProviderChain;
 import software.amazon.awssdk.services.bedrockruntime.BedrockRuntimeAsyncClient;
 import software.amazon.awssdk.services.bedrockruntime.BedrockRuntimeClient;
+import software.amazon.awssdk.services.bedrockruntime.model.CachePointBlock;
 import software.amazon.awssdk.services.bedrockruntime.model.ContentBlock;
 import software.amazon.awssdk.services.bedrockruntime.model.ConversationRole;
 import software.amazon.awssdk.services.bedrockruntime.model.ConverseMetrics;
 import software.amazon.awssdk.services.bedrockruntime.model.ConverseRequest;
 import software.amazon.awssdk.services.bedrockruntime.model.ConverseResponse;
-import software.amazon.awssdk.services.bedrockruntime.model.ConverseStreamOutput;
 import software.amazon.awssdk.services.bedrockruntime.model.ConverseStreamRequest;
-import software.amazon.awssdk.services.bedrockruntime.model.ConverseStreamResponseHandler;
 import software.amazon.awssdk.services.bedrockruntime.model.DocumentBlock;
 import software.amazon.awssdk.services.bedrockruntime.model.DocumentSource;
 import software.amazon.awssdk.services.bedrockruntime.model.ImageBlock;
 import software.amazon.awssdk.services.bedrockruntime.model.ImageSource;
 import software.amazon.awssdk.services.bedrockruntime.model.InferenceConfiguration;
+import software.amazon.awssdk.services.bedrockruntime.model.JsonSchemaDefinition;
 import software.amazon.awssdk.services.bedrockruntime.model.Message;
+import software.amazon.awssdk.services.bedrockruntime.model.OutputConfig;
+import software.amazon.awssdk.services.bedrockruntime.model.OutputFormat;
+import software.amazon.awssdk.services.bedrockruntime.model.OutputFormatStructure;
 import software.amazon.awssdk.services.bedrockruntime.model.S3Location;
 import software.amazon.awssdk.services.bedrockruntime.model.StopReason;
 import software.amazon.awssdk.services.bedrockruntime.model.SystemContentBlock;
+import software.amazon.awssdk.services.bedrockruntime.model.TokenUsage;
 import software.amazon.awssdk.services.bedrockruntime.model.Tool;
 import software.amazon.awssdk.services.bedrockruntime.model.ToolConfiguration;
 import software.amazon.awssdk.services.bedrockruntime.model.ToolInputSchema;
@@ -79,8 +76,12 @@ import software.amazon.awssdk.services.bedrockruntime.model.VideoBlock;
 import software.amazon.awssdk.services.bedrockruntime.model.VideoFormat;
 import software.amazon.awssdk.services.bedrockruntime.model.VideoSource;
 
+import org.springframework.ai.bedrock.converse.api.BedrockCacheOptions;
+import org.springframework.ai.bedrock.converse.api.BedrockCacheStrategy;
 import org.springframework.ai.bedrock.converse.api.BedrockMediaFormat;
 import org.springframework.ai.bedrock.converse.api.ConverseApiUtils;
+import org.springframework.ai.bedrock.converse.api.ConverseChatResponseStream;
+import org.springframework.ai.bedrock.converse.api.MediaFetcher;
 import org.springframework.ai.bedrock.converse.api.URLValidator;
 import org.springframework.ai.chat.messages.AssistantMessage;
 import org.springframework.ai.chat.messages.MessageType;
@@ -89,6 +90,7 @@ import org.springframework.ai.chat.messages.UserMessage;
 import org.springframework.ai.chat.metadata.ChatGenerationMetadata;
 import org.springframework.ai.chat.metadata.ChatResponseMetadata;
 import org.springframework.ai.chat.metadata.DefaultUsage;
+import org.springframework.ai.chat.metadata.Usage;
 import org.springframework.ai.chat.model.ChatModel;
 import org.springframework.ai.chat.model.ChatResponse;
 import org.springframework.ai.chat.model.Generation;
@@ -101,13 +103,18 @@ import org.springframework.ai.chat.prompt.ChatOptions;
 import org.springframework.ai.chat.prompt.Prompt;
 import org.springframework.ai.content.Media;
 import org.springframework.ai.model.ModelOptionsUtils;
+import org.springframework.ai.model.tool.DefaultToolExecutionEligibilityPredicate;
+import org.springframework.ai.model.tool.ToolCallingChatOptions;
+import org.springframework.ai.model.tool.ToolCallingManager;
+import org.springframework.ai.model.tool.ToolExecutionEligibilityPredicate;
+import org.springframework.ai.model.tool.ToolExecutionResult;
 import org.springframework.ai.model.tool.internal.ToolCallReactiveContextHolder;
 import org.springframework.ai.observation.conventions.AiProvider;
 import org.springframework.ai.tool.definition.ToolDefinition;
 import org.springframework.util.Assert;
 import org.springframework.util.CollectionUtils;
-import org.springframework.util.StreamUtils;
 import org.springframework.util.StringUtils;
+import org.springframework.web.client.RestClientException;
 
 /**
  * A {@link ChatModel} implementation that uses the Amazon Bedrock Converse API to
@@ -169,6 +176,8 @@ public class BedrockProxyChatModel implements ChatModel {
 	 */
 	private ChatModelObservationConvention observationConvention;
 
+	private final MediaFetcher mediaFetcher;
+
 	public BedrockProxyChatModel(BedrockRuntimeClient bedrockRuntimeClient,
 			BedrockRuntimeAsyncClient bedrockRuntimeAsyncClient, BedrockChatOptions defaultOptions,
 			ObservationRegistry observationRegistry, ToolCallingManager toolCallingManager) {
@@ -180,11 +189,20 @@ public class BedrockProxyChatModel implements ChatModel {
 			BedrockRuntimeAsyncClient bedrockRuntimeAsyncClient, BedrockChatOptions defaultOptions,
 			ObservationRegistry observationRegistry, ToolCallingManager toolCallingManager,
 			ToolExecutionEligibilityPredicate toolExecutionEligibilityPredicate) {
+		this(bedrockRuntimeClient, bedrockRuntimeAsyncClient, defaultOptions, observationRegistry, toolCallingManager,
+				toolExecutionEligibilityPredicate, new MediaFetcher());
+	}
+
+	public BedrockProxyChatModel(BedrockRuntimeClient bedrockRuntimeClient,
+			BedrockRuntimeAsyncClient bedrockRuntimeAsyncClient, BedrockChatOptions defaultOptions,
+			ObservationRegistry observationRegistry, ToolCallingManager toolCallingManager,
+			ToolExecutionEligibilityPredicate toolExecutionEligibilityPredicate, MediaFetcher mediaFetcher) {
 
 		Assert.notNull(bedrockRuntimeClient, "bedrockRuntimeClient must not be null");
 		Assert.notNull(bedrockRuntimeAsyncClient, "bedrockRuntimeAsyncClient must not be null");
 		Assert.notNull(toolCallingManager, "toolCallingManager must not be null");
 		Assert.notNull(toolExecutionEligibilityPredicate, "toolExecutionEligibilityPredicate must not be null");
+		Assert.notNull(mediaFetcher, "mediaFetcher must not be null");
 
 		this.bedrockRuntimeClient = bedrockRuntimeClient;
 		this.bedrockRuntimeAsyncClient = bedrockRuntimeAsyncClient;
@@ -192,6 +210,7 @@ public class BedrockProxyChatModel implements ChatModel {
 		this.observationRegistry = observationRegistry;
 		this.toolCallingManager = toolCallingManager;
 		this.toolExecutionEligibilityPredicate = toolExecutionEligibilityPredicate;
+		this.mediaFetcher = mediaFetcher;
 	}
 
 	private static BedrockChatOptions from(ChatOptions options) {
@@ -268,140 +287,173 @@ public class BedrockProxyChatModel implements ChatModel {
 	}
 
 	Prompt buildRequestPrompt(Prompt prompt) {
-		BedrockChatOptions runtimeOptions = null;
-		if (prompt.getOptions() != null) {
-			if (prompt.getOptions() instanceof BedrockChatOptions bedrockChatOptions) {
-				runtimeOptions = bedrockChatOptions.copy();
-			}
-			else {
-				runtimeOptions = from(prompt.getOptions());
-			}
-		}
+		BedrockChatOptions runtimeOptions = (BedrockChatOptions) prompt.getOptions();
+		runtimeOptions = runtimeOptions == null ? this.defaultOptions : runtimeOptions;
+		ToolCallingChatOptions.validateToolCallbacks(runtimeOptions.getToolCallbacks());
 
-		// Merge runtime options with the default options
-		BedrockChatOptions updatedRuntimeOptions = null;
-		if (runtimeOptions == null) {
-			updatedRuntimeOptions = this.defaultOptions.copy();
-		}
-		else {
-			if (runtimeOptions.getFrequencyPenalty() != null) {
-				logger.warn("The frequencyPenalty option is not supported by BedrockProxyChatModel. Ignoring.");
-			}
-			if (runtimeOptions.getPresencePenalty() != null) {
-				logger.warn("The presencePenalty option is not supported by BedrockProxyChatModel. Ignoring.");
-			}
-			if (runtimeOptions.getTopK() != null) {
-				logger.warn("The topK option is not supported by BedrockProxyChatModel. Ignoring.");
-			}
-			updatedRuntimeOptions = BedrockChatOptions.builder()
-				.model(runtimeOptions.getModel() != null ? runtimeOptions.getModel() : this.defaultOptions.getModel())
-				.maxTokens(runtimeOptions.getMaxTokens() != null ? runtimeOptions.getMaxTokens()
-						: this.defaultOptions.getMaxTokens())
-				.stopSequences(runtimeOptions.getStopSequences() != null ? runtimeOptions.getStopSequences()
-						: this.defaultOptions.getStopSequences())
-				.temperature(runtimeOptions.getTemperature() != null ? runtimeOptions.getTemperature()
-						: this.defaultOptions.getTemperature())
-				.topP(runtimeOptions.getTopP() != null ? runtimeOptions.getTopP() : this.defaultOptions.getTopP())
-
-				.toolCallbacks(runtimeOptions.getToolCallbacks() != null ? runtimeOptions.getToolCallbacks()
-						: this.defaultOptions.getToolCallbacks())
-				.toolNames(runtimeOptions.getToolNames() != null ? runtimeOptions.getToolNames()
-						: this.defaultOptions.getToolNames())
-				.toolContext(runtimeOptions.getToolContext() != null ? runtimeOptions.getToolContext()
-						: this.defaultOptions.getToolContext())
-				.internalToolExecutionEnabled(runtimeOptions.getInternalToolExecutionEnabled() != null
-						? runtimeOptions.getInternalToolExecutionEnabled()
-						: this.defaultOptions.getInternalToolExecutionEnabled())
-				.build();
-		}
-
-		ToolCallingChatOptions.validateToolCallbacks(updatedRuntimeOptions.getToolCallbacks());
-
-		return new Prompt(prompt.getInstructions(), updatedRuntimeOptions);
+		return prompt.mutate().chatOptions(runtimeOptions).build();
 	}
 
 	ConverseRequest createRequest(Prompt prompt) {
 
-		List<Message> instructionMessages = prompt.getInstructions()
+		BedrockChatOptions updatedRuntimeOptions = prompt.getOptions().copy();
+
+		// Get cache options to determine strategy
+		BedrockCacheOptions cacheOptions = updatedRuntimeOptions.getCacheOptions();
+		boolean shouldCacheConversationHistory = cacheOptions != null
+				&& cacheOptions.getStrategy() == BedrockCacheStrategy.CONVERSATION_HISTORY;
+
+		// Get all non-system messages
+		List<org.springframework.ai.chat.messages.Message> allNonSystemMessages = prompt.getInstructions()
 			.stream()
 			.filter(message -> message.getMessageType() != MessageType.SYSTEM)
-			.map(message -> {
-				if (message.getMessageType() == MessageType.USER) {
-					List<ContentBlock> contents = new ArrayList<>();
-					if (message instanceof UserMessage) {
-						var userMessage = (UserMessage) message;
-						contents.add(ContentBlock.fromText(userMessage.getText()));
+			.toList();
 
-						if (!CollectionUtils.isEmpty(userMessage.getMedia())) {
-							List<ContentBlock> mediaContent = userMessage.getMedia()
-								.stream()
-								.map(this::mapMediaToContentBlock)
-								.toList();
-							contents.addAll(mediaContent);
-						}
-					}
-					return Message.builder().content(contents).role(ConversationRole.USER).build();
+		// Find the last user message index for CONVERSATION_HISTORY caching
+		int lastUserMessageIndex = -1;
+		if (shouldCacheConversationHistory) {
+			for (int i = allNonSystemMessages.size() - 1; i >= 0; i--) {
+				if (allNonSystemMessages.get(i).getMessageType() == MessageType.USER) {
+					lastUserMessageIndex = i;
+					break;
 				}
-				else if (message.getMessageType() == MessageType.ASSISTANT) {
-					AssistantMessage assistantMessage = (AssistantMessage) message;
-					List<ContentBlock> contentBlocks = new ArrayList<>();
-					if (StringUtils.hasText(message.getText())) {
-						contentBlocks.add(ContentBlock.fromText(message.getText()));
+			}
+			if (logger.isDebugEnabled()) {
+				logger.debug("CONVERSATION_HISTORY caching: lastUserMessageIndex={}, totalMessages={}",
+						lastUserMessageIndex, allNonSystemMessages.size());
+			}
+		}
+
+		// Build instruction messages with potential caching
+		List<Message> instructionMessages = new ArrayList<>();
+		for (int i = 0; i < allNonSystemMessages.size(); i++) {
+			org.springframework.ai.chat.messages.Message message = allNonSystemMessages.get(i);
+
+			// Determine if this message should have a cache point
+			// For CONVERSATION_HISTORY: cache point goes on the last user message
+			boolean shouldApplyCachePoint = shouldCacheConversationHistory && i == lastUserMessageIndex;
+
+			if (message.getMessageType() == MessageType.USER) {
+				List<ContentBlock> contents = new ArrayList<>();
+				if (message instanceof UserMessage) {
+					var userMessage = (UserMessage) message;
+					contents.add(ContentBlock.fromText(userMessage.getText()));
+
+					if (!CollectionUtils.isEmpty(userMessage.getMedia())) {
+						List<ContentBlock> mediaContent = userMessage.getMedia()
+							.stream()
+							.map(this::mapMediaToContentBlock)
+							.toList();
+						contents.addAll(mediaContent);
 					}
-					if (!CollectionUtils.isEmpty(assistantMessage.getToolCalls())) {
-						for (AssistantMessage.ToolCall toolCall : assistantMessage.getToolCalls()) {
-
-							var argumentsDocument = ConverseApiUtils
-								.convertObjectToDocument(ModelOptionsUtils.jsonToMap(toolCall.arguments()));
-
-							contentBlocks.add(ContentBlock.fromToolUse(ToolUseBlock.builder()
-								.toolUseId(toolCall.id())
-								.name(toolCall.name())
-								.input(argumentsDocument)
-								.build()));
-
-						}
-					}
-					return Message.builder().content(contentBlocks).role(ConversationRole.ASSISTANT).build();
 				}
-				else if (message.getMessageType() == MessageType.TOOL) {
-					List<ContentBlock> contentBlocks = ((ToolResponseMessage) message).getResponses()
-						.stream()
-						.map(toolResponse -> {
+
+				// Apply cache point if this is the last user message
+				if (shouldApplyCachePoint) {
+					CachePointBlock cachePoint = CachePointBlock.builder().type("default").build();
+					contents.add(ContentBlock.fromCachePoint(cachePoint));
+					logger.debug("Applied cache point on last user message (conversation history caching)");
+				}
+
+				instructionMessages.add(Message.builder().content(contents).role(ConversationRole.USER).build());
+			}
+			else if (message.getMessageType() == MessageType.ASSISTANT) {
+				AssistantMessage assistantMessage = (AssistantMessage) message;
+				List<ContentBlock> contentBlocks = new ArrayList<>();
+				if (StringUtils.hasText(message.getText())) {
+					contentBlocks.add(ContentBlock.fromText(message.getText()));
+				}
+				if (!CollectionUtils.isEmpty(assistantMessage.getToolCalls())) {
+					for (AssistantMessage.ToolCall toolCall : assistantMessage.getToolCalls()) {
+
+						var argumentsDocument = ConverseApiUtils
+							.convertObjectToDocument(ModelOptionsUtils.jsonToMap(toolCall.arguments()));
+
+						contentBlocks.add(ContentBlock.fromToolUse(ToolUseBlock.builder()
+							.toolUseId(toolCall.id())
+							.name(toolCall.name())
+							.input(argumentsDocument)
+							.build()));
+
+					}
+				}
+
+				instructionMessages
+					.add(Message.builder().content(contentBlocks).role(ConversationRole.ASSISTANT).build());
+			}
+			else if (message.getMessageType() == MessageType.TOOL) {
+				List<ContentBlock> contentBlocks = new ArrayList<>(
+						((ToolResponseMessage) message).getResponses().stream().map(toolResponse -> {
 							ToolResultBlock toolResultBlock = ToolResultBlock.builder()
 								.toolUseId(toolResponse.id())
 								.content(ToolResultContentBlock.builder().text(toolResponse.responseData()).build())
 								.build();
 							return ContentBlock.fromToolResult(toolResultBlock);
-						})
-						.toList();
-					return Message.builder().content(contentBlocks).role(ConversationRole.USER).build();
-				}
-				else {
-					throw new IllegalArgumentException("Unsupported message type: " + message.getMessageType());
-				}
-			})
-			.toList();
+						}).toList());
 
-		List<SystemContentBlock> systemMessages = prompt.getInstructions()
+				instructionMessages.add(Message.builder().content(contentBlocks).role(ConversationRole.USER).build());
+			}
+			else {
+				throw new IllegalArgumentException("Unsupported message type: " + message.getMessageType());
+			}
+		}
+
+		// Determine if system message caching should be applied
+		boolean shouldCacheSystem = cacheOptions != null
+				&& (cacheOptions.getStrategy() == BedrockCacheStrategy.SYSTEM_ONLY
+						|| cacheOptions.getStrategy() == BedrockCacheStrategy.SYSTEM_AND_TOOLS);
+
+		if (logger.isDebugEnabled() && cacheOptions != null) {
+			logger.debug("Cache strategy: {}, shouldCacheSystem: {}", cacheOptions.getStrategy(), shouldCacheSystem);
+		}
+
+		// Build system messages with optional caching on last message
+		List<org.springframework.ai.chat.messages.Message> systemMessageList = prompt.getInstructions()
 			.stream()
 			.filter(m -> m.getMessageType() == MessageType.SYSTEM)
-			.map(sysMessage -> SystemContentBlock.builder().text(sysMessage.getText()).build())
 			.toList();
 
-		BedrockChatOptions updatedRuntimeOptions = prompt.getOptions().copy();
+		List<SystemContentBlock> systemMessages = new ArrayList<>();
+		for (int i = 0; i < systemMessageList.size(); i++) {
+			org.springframework.ai.chat.messages.Message sysMessage = systemMessageList.get(i);
+
+			// Add the text content block
+			SystemContentBlock textBlock = SystemContentBlock.builder().text(sysMessage.getText()).build();
+			systemMessages.add(textBlock);
+
+			// Apply cache point marker after last system message if caching is enabled
+			// SystemContentBlock is a UNION type - text and cachePoint must be separate
+			// blocks
+			boolean isLastSystem = (i == systemMessageList.size() - 1);
+			if (isLastSystem && shouldCacheSystem) {
+				CachePointBlock cachePoint = CachePointBlock.builder().type("default").build();
+				SystemContentBlock cachePointBlock = SystemContentBlock.builder().cachePoint(cachePoint).build();
+				systemMessages.add(cachePointBlock);
+				logger.debug("Applied cache point after system message");
+			}
+		}
 
 		ToolConfiguration toolConfiguration = null;
 
 		// Add the tool definitions to the request's tools parameter.
 		List<ToolDefinition> toolDefinitions = this.toolCallingManager.resolveToolDefinitions(updatedRuntimeOptions);
 
+		// Determine if tool caching should be applied
+		boolean shouldCacheTools = cacheOptions != null
+				&& (cacheOptions.getStrategy() == BedrockCacheStrategy.TOOLS_ONLY
+						|| cacheOptions.getStrategy() == BedrockCacheStrategy.SYSTEM_AND_TOOLS);
+
 		if (!CollectionUtils.isEmpty(toolDefinitions)) {
-			List<Tool> bedrockTools = toolDefinitions.stream().map(toolDefinition -> {
+			List<Tool> bedrockTools = new ArrayList<>();
+
+			for (int i = 0; i < toolDefinitions.size(); i++) {
+				ToolDefinition toolDefinition = toolDefinitions.get(i);
 				var description = toolDefinition.description();
 				var name = toolDefinition.name();
 				String inputSchema = toolDefinition.inputSchema();
-				return Tool.builder()
+
+				// Create tool specification
+				Tool tool = Tool.builder()
 					.toolSpec(ToolSpecification.builder()
 						.name(name)
 						.description(description)
@@ -409,7 +461,18 @@ public class BedrockProxyChatModel implements ChatModel {
 								ConverseApiUtils.convertObjectToDocument(ModelOptionsUtils.jsonToMap(inputSchema))))
 						.build())
 					.build();
-			}).toList();
+				bedrockTools.add(tool);
+
+				// Apply cache point marker after last tool if caching is enabled
+				// Tool is a UNION type - toolSpec and cachePoint must be separate objects
+				boolean isLastTool = (i == toolDefinitions.size() - 1);
+				if (isLastTool && shouldCacheTools) {
+					CachePointBlock cachePoint = CachePointBlock.builder().type("default").build();
+					Tool cachePointTool = Tool.builder().cachePoint(cachePoint).build();
+					bedrockTools.add(cachePointTool);
+					logger.debug("Applied cache point after tool definitions");
+				}
+			}
 
 			toolConfiguration = ToolConfiguration.builder().tools(bedrockTools).build();
 		}
@@ -425,6 +488,9 @@ public class BedrockProxyChatModel implements ChatModel {
 		Document additionalModelRequestFields = ConverseApiUtils
 			.getChatOptionsAdditionalModelRequestFields(this.defaultOptions, prompt.getOptions());
 
+		Map<String, String> requestMetadata = ConverseApiUtils
+			.getRequestMetadata(prompt.getUserMessage().getMetadata());
+
 		return ConverseRequest.builder()
 			.modelId(updatedRuntimeOptions.getModel())
 			.inferenceConfig(inferenceConfiguration)
@@ -432,10 +498,28 @@ public class BedrockProxyChatModel implements ChatModel {
 			.system(systemMessages)
 			.additionalModelRequestFields(additionalModelRequestFields)
 			.toolConfig(toolConfiguration)
+			.requestMetadata(requestMetadata)
+			.outputConfig(buildOutputConfig(updatedRuntimeOptions))
 			.build();
 	}
 
-	private ContentBlock mapMediaToContentBlock(Media media) {
+	private OutputConfig buildOutputConfig(BedrockChatOptions options) {
+		String schema = options.getOutputSchema();
+		if (schema == null) {
+			return null;
+		}
+
+		return OutputConfig.builder()
+			.textFormat(OutputFormat.builder()
+				.type("json_schema")
+				.structure(OutputFormatStructure.builder()
+					.jsonSchema(JsonSchemaDefinition.builder().schema(schema).name("response_schema").build())
+					.build())
+				.build())
+			.build();
+	}
+
+	ContentBlock mapMediaToContentBlock(Media media) {
 
 		var mimeType = media.getMimeType();
 
@@ -446,9 +530,7 @@ public class BedrockProxyChatModel implements ChatModel {
 				videoSource = VideoSource.builder().bytes(SdkBytes.fromByteArrayUnsafe(bytes)).build();
 			}
 			else if (media.getData() instanceof String uriText) {
-				// if (URLValidator.isValidURLBasic(uriText)) {
 				videoSource = VideoSource.builder().s3Location(S3Location.builder().uri(uriText).build()).build();
-				// }
 			}
 			else if (media.getData() instanceof URL url) {
 				try {
@@ -473,29 +555,40 @@ public class BedrockProxyChatModel implements ChatModel {
 			}
 			else if (media.getData() instanceof String text) {
 
-				if (URLValidator.isValidURLBasic(text)) {
-					try {
-						URL url = new URL(text);
-						URLConnection connection = url.openConnection();
-						try (InputStream is = connection.getInputStream()) {
-							sourceBuilder.bytes(SdkBytes.fromByteArrayUnsafe(StreamUtils.copyToByteArray(is))).build();
+				if (text.startsWith("s3://")) {
+					sourceBuilder.s3Location(S3Location.builder().uri(text).build()).build();
+				}
+				else if (text.startsWith("http://") || text.startsWith("https://")) {
+					// Not base64
+					if (URLValidator.isValidURLStrict(text)) {
+						try {
+							byte[] bytes = this.mediaFetcher.fetch(URI.create(text));
+							sourceBuilder.bytes(SdkBytes.fromByteArrayUnsafe(bytes)).build();
+						}
+						catch (SecurityException | RestClientException e) {
+							throw new RuntimeException("Failed to read media data from URL: " + text, e);
 						}
 					}
-					catch (IOException e) {
-						throw new RuntimeException("Failed to read media data from URL: " + text, e);
+					else {
+						throw new SecurityException("URL is not valid under strict validation rules: " + text);
 					}
 				}
 				else {
+					// Assume it's base64-encoded image data
 					sourceBuilder.bytes(SdkBytes.fromByteArray(Base64.getDecoder().decode(text)));
 				}
 			}
 			else if (media.getData() instanceof URL url) {
 
-				try (InputStream is = url.openConnection().getInputStream()) {
-					byte[] imageBytes = StreamUtils.copyToByteArray(is);
-					sourceBuilder.bytes(SdkBytes.fromByteArrayUnsafe(imageBytes)).build();
+				try {
+					String protocol = url.getProtocol();
+					if (!"http".equalsIgnoreCase(protocol) && !"https".equalsIgnoreCase(protocol)) {
+						throw new SecurityException("Unsupported URL protocol: " + protocol);
+					}
+					byte[] bytes = this.mediaFetcher.fetch(url.toURI());
+					sourceBuilder.bytes(SdkBytes.fromByteArrayUnsafe(bytes)).build();
 				}
-				catch (IOException e) {
+				catch (SecurityException | RestClientException | URISyntaxException e) {
 					throw new IllegalArgumentException("Failed to read media data from URL: " + url, e);
 				}
 			}
@@ -511,7 +604,7 @@ public class BedrockProxyChatModel implements ChatModel {
 		else if (BedrockMediaFormat.isSupportedDocumentFormat(mimeType)) { // Document
 
 			return ContentBlock.fromDocument(DocumentBlock.builder()
-				.name(media.getName())
+				.name(sanitizeDocumentName(media.getName()))
 				.format(BedrockMediaFormat.getDocumentFormat(mimeType))
 				.source(DocumentSource.builder().bytes(SdkBytes.fromByteArray(media.getDataAsByteArray())).build())
 				.build());
@@ -520,36 +613,18 @@ public class BedrockProxyChatModel implements ChatModel {
 		throw new IllegalArgumentException("Unsupported media format: " + mimeType);
 	}
 
-	private static byte[] getContentMediaData(Object mediaData) {
-		if (mediaData instanceof byte[] bytes) {
-			return bytes;
-		}
-		else if (mediaData instanceof String text) {
-			if (URLValidator.isValidURLBasic(text)) {
-				try {
-					URL url = new URL(text);
-					URLConnection connection = url.openConnection();
-					try (InputStream is = connection.getInputStream()) {
-						return StreamUtils.copyToByteArray(is);
-					}
-				}
-				catch (IOException e) {
-					throw new RuntimeException("Failed to read media data from URL: " + text, e);
-				}
-			}
-			return text.getBytes();
-		}
-		else if (mediaData instanceof URL url) {
-			try (InputStream is = url.openConnection().getInputStream()) {
-				return StreamUtils.copyToByteArray(is);
-			}
-			catch (IOException e) {
-				throw new RuntimeException("Failed to read media data from URL: " + url, e);
-			}
-		}
-		else {
-			throw new IllegalArgumentException("Unsupported media data type: " + mediaData.getClass().getSimpleName());
-		}
+	/**
+	 * Sanitizes a document name to conform to Amazon Bedrock's naming restrictions. The
+	 * name can only contain alphanumeric characters, whitespace characters (no more than
+	 * one in a row), hyphens, parentheses, and square brackets.
+	 * @param name the document name to sanitize
+	 * @return the sanitized document name
+	 * @see <a href=
+	 * "https://docs.aws.amazon.com/bedrock/latest/APIReference/API_runtime_DocumentBlock.html">DocumentBlock
+	 * API Reference</a>
+	 */
+	static String sanitizeDocumentName(String name) {
+		return name.replaceAll("[^a-zA-Z0-9\\s\\-()\\[\\]]", "-");
 	}
 
 	/**
@@ -568,14 +643,16 @@ public class BedrockProxyChatModel implements ChatModel {
 		List<Generation> generations = message.content()
 			.stream()
 			.filter(content -> content.type() != ContentBlock.Type.TOOL_USE)
-			.map(content -> new Generation(new AssistantMessage(content.text(), Map.of()),
+			.filter(content -> content.text() != null)
+			.map(content -> new Generation(
+					AssistantMessage.builder().content(content.text()).properties(Map.of()).build(),
 					ChatGenerationMetadata.builder().finishReason(response.stopReasonAsString()).build()))
 			.toList();
 
 		List<Generation> allGenerations = new ArrayList<>(generations);
 
 		if (response.stopReasonAsString() != null && generations.isEmpty()) {
-			Generation generation = new Generation(new AssistantMessage(null, Map.of()),
+			Generation generation = new Generation(AssistantMessage.builder().properties(Map.of()).build(),
 					ChatGenerationMetadata.builder().finishReason(response.stopReasonAsString()).build());
 			allGenerations.add(generation);
 		}
@@ -599,7 +676,11 @@ public class BedrockProxyChatModel implements ChatModel {
 					.add(new AssistantMessage.ToolCall(functionCallId, "function", functionName, functionArguments));
 			}
 
-			AssistantMessage assistantMessage = new AssistantMessage("", Map.of(), toolCalls);
+			AssistantMessage assistantMessage = AssistantMessage.builder()
+				.content("")
+				.properties(Map.of())
+				.toolCalls(toolCalls)
+				.build();
 			Generation toolCallGeneration = new Generation(assistantMessage,
 					ChatGenerationMetadata.builder().finishReason(response.stopReasonAsString()).build());
 			allGenerations.add(toolCallGeneration);
@@ -608,6 +689,8 @@ public class BedrockProxyChatModel implements ChatModel {
 		Integer promptTokens = response.usage().inputTokens();
 		Integer generationTokens = response.usage().outputTokens();
 		int totalTokens = response.usage().totalTokens();
+		Integer cacheReadInputTokens = response.usage().cacheReadInputTokens();
+		Integer cacheWriteInputTokens = response.usage().cacheWriteInputTokens();
 
 		if (perviousChatResponse != null && perviousChatResponse.getMetadata() != null
 				&& perviousChatResponse.getMetadata().getUsage() != null) {
@@ -615,20 +698,59 @@ public class BedrockProxyChatModel implements ChatModel {
 			promptTokens += perviousChatResponse.getMetadata().getUsage().getPromptTokens();
 			generationTokens += perviousChatResponse.getMetadata().getUsage().getCompletionTokens();
 			totalTokens += perviousChatResponse.getMetadata().getUsage().getTotalTokens();
+
+			// Merge cache metrics from previous response if available
+			if (perviousChatResponse.getMetadata().getUsage().getNativeUsage() instanceof TokenUsage) {
+				TokenUsage previousTokenUsage = (TokenUsage) perviousChatResponse.getMetadata()
+					.getUsage()
+					.getNativeUsage();
+				if (cacheReadInputTokens == null) {
+					cacheReadInputTokens = previousTokenUsage.cacheReadInputTokens();
+				}
+				else if (previousTokenUsage.cacheReadInputTokens() != null) {
+					cacheReadInputTokens += previousTokenUsage.cacheReadInputTokens();
+				}
+				if (cacheWriteInputTokens == null) {
+					cacheWriteInputTokens = previousTokenUsage.cacheWriteInputTokens();
+				}
+				else if (previousTokenUsage.cacheWriteInputTokens() != null) {
+					cacheWriteInputTokens += previousTokenUsage.cacheWriteInputTokens();
+				}
+			}
 		}
 
-		DefaultUsage usage = new DefaultUsage(promptTokens, generationTokens, totalTokens);
+		// Create native TokenUsage with cache metrics
+		TokenUsage nativeTokenUsage = TokenUsage.builder()
+			.inputTokens(promptTokens)
+			.outputTokens(generationTokens)
+			.totalTokens(totalTokens)
+			.cacheReadInputTokens(cacheReadInputTokens)
+			.cacheWriteInputTokens(cacheWriteInputTokens)
+			.build();
+
+		DefaultUsage usage = new DefaultUsage(promptTokens, generationTokens, totalTokens, nativeTokenUsage);
 
 		Document modelResponseFields = response.additionalModelResponseFields();
 
 		ConverseMetrics metrics = response.metrics();
 
-		var chatResponseMetaData = ChatResponseMetadata.builder()
+		var metadataBuilder = ChatResponseMetadata.builder()
 			.id(response.responseMetadata() != null ? response.responseMetadata().requestId() : "Unknown")
-			.usage(usage)
-			.build();
+			.usage(usage);
 
-		return new ChatResponse(allGenerations, chatResponseMetaData);
+		// Add cache metrics to metadata if available (for backward compatibility)
+		Map<String, Object> additionalMetadata = new HashMap<>();
+		if (response.usage().cacheReadInputTokens() != null) {
+			additionalMetadata.put("cacheReadInputTokens", response.usage().cacheReadInputTokens());
+		}
+		if (response.usage().cacheWriteInputTokens() != null) {
+			additionalMetadata.put("cacheWriteInputTokens", response.usage().cacheWriteInputTokens());
+		}
+		if (!additionalMetadata.isEmpty()) {
+			metadataBuilder.metadata(additionalMetadata);
+		}
+
+		return new ChatResponse(allGenerations, metadataBuilder.build());
 	}
 
 	/**
@@ -670,11 +792,18 @@ public class BedrockProxyChatModel implements ChatModel {
 				.system(converseRequest.system())
 				.additionalModelRequestFields(converseRequest.additionalModelRequestFields())
 				.toolConfig(converseRequest.toolConfig())
+				.requestMetadata(converseRequest.requestMetadata())
+				.outputConfig(converseRequest.outputConfig())
 				.build();
 
-			Flux<ConverseStreamOutput> response = converseStream(converseStreamRequest);
+			Usage accumulatedUsage = null;
+			if (perviousChatResponse != null && perviousChatResponse.getMetadata() != null) {
+				accumulatedUsage = perviousChatResponse.getMetadata().getUsage();
+			}
 
-			Flux<ChatResponse> chatResponses = ConverseApiUtils.toChatResponse(response, perviousChatResponse);
+			Flux<ChatResponse> chatResponses = new ConverseChatResponseStream(this.bedrockRuntimeAsyncClient,
+					converseStreamRequest, accumulatedUsage)
+				.stream();
 
 			Flux<ChatResponse> chatResponseFlux = chatResponses.switchMap(chatResponse -> {
 
@@ -683,7 +812,7 @@ public class BedrockProxyChatModel implements ChatModel {
 
 					// FIXME: bounded elastic needs to be used since tool calling
 					// is currently only synchronous
-					return Flux.deferContextual((ctx) -> {
+					return Flux.deferContextual(ctx -> {
 						ToolExecutionResult toolExecutionResult;
 						try {
 							ToolCallReactiveContextHolder.setContext(ctx);
@@ -721,48 +850,6 @@ public class BedrockProxyChatModel implements ChatModel {
 		});
 	}
 
-	public static final EmitFailureHandler DEFAULT_EMIT_FAILURE_HANDLER = EmitFailureHandler
-		.busyLooping(Duration.ofSeconds(10));
-
-	/**
-	 * Invoke the model and return the response stream.
-	 *
-	 * https://docs.aws.amazon.com/bedrock/latest/userguide/model-parameters.html
-	 * https://docs.aws.amazon.com/bedrock/latest/APIReference/API_runtime_Converse.html
-	 * https://sdk.amazonaws.com/java/api/latest/software/amazon/awssdk/services/bedrockruntime/BedrockRuntimeAsyncClient.html#converseStream
-	 * @param converseStreamRequest Model invocation request.
-	 * @return The model invocation response stream.
-	 */
-	public Flux<ConverseStreamOutput> converseStream(ConverseStreamRequest converseStreamRequest) {
-		Assert.notNull(converseStreamRequest, "'converseStreamRequest' must not be null");
-
-		Sinks.Many<ConverseStreamOutput> eventSink = Sinks.many().multicast().onBackpressureBuffer();
-
-		ConverseStreamResponseHandler.Visitor visitor = ConverseStreamResponseHandler.Visitor.builder()
-			.onDefault(output -> {
-				logger.debug("Received converse stream output:{}", output);
-				eventSink.emitNext(output, DEFAULT_EMIT_FAILURE_HANDLER);
-			})
-			.build();
-
-		ConverseStreamResponseHandler responseHandler = ConverseStreamResponseHandler.builder()
-			.onEventStream(stream -> stream.subscribe(e -> e.accept(visitor)))
-			.onComplete(() -> {
-				eventSink.emitComplete(DEFAULT_EMIT_FAILURE_HANDLER);
-				logger.info("Completed streaming response.");
-			})
-			.onError(error -> {
-				logger.error("Error handling Bedrock converse stream response", error);
-				eventSink.emitError(error, DEFAULT_EMIT_FAILURE_HANDLER);
-			})
-			.build();
-
-		this.bedrockRuntimeAsyncClient.converseStream(converseStreamRequest, responseHandler);
-
-		return eventSink.asFlux();
-
-	}
-
 	/**
 	 * Use the provided convention for reporting observation data
 	 * @param observationConvention The provided convention
@@ -782,7 +869,15 @@ public class BedrockProxyChatModel implements ChatModel {
 
 		private Region region = Region.US_EAST_1;
 
-		private Duration timeout = Duration.ofMinutes(10);
+		private Duration timeout = Duration.ofMinutes(5L);
+
+		private Duration connectionTimeout = Duration.ofSeconds(5L);
+
+		private Duration asyncReadTimeout = Duration.ofSeconds(30L);
+
+		private Duration connectionAcquisitionTimeout = Duration.ofSeconds(30L);
+
+		private Duration socketTimeout = Duration.ofSeconds(30L);
 
 		private ToolCallingManager toolCallingManager;
 
@@ -836,6 +931,30 @@ public class BedrockProxyChatModel implements ChatModel {
 			return this;
 		}
 
+		public Builder connectionTimeout(Duration connectionTimeout) {
+			Assert.notNull(connectionTimeout, "'connectionTimeout' must not be null.");
+			this.connectionTimeout = connectionTimeout;
+			return this;
+		}
+
+		public Builder asyncReadTimeout(Duration asyncReadTimeout) {
+			Assert.notNull(asyncReadTimeout, "'asyncReadTimeout' must not be null.");
+			this.asyncReadTimeout = asyncReadTimeout;
+			return this;
+		}
+
+		public Builder connectionAcquisitionTimeout(Duration connectionAcquisitionTimeout) {
+			Assert.notNull(connectionAcquisitionTimeout, "'connectionAcquisitionTimeout' must not be null.");
+			this.connectionAcquisitionTimeout = connectionAcquisitionTimeout;
+			return this;
+		}
+
+		public Builder socketTimeout(Duration socketTimeout) {
+			Assert.notNull(socketTimeout, "'socketTimeout' must not be null.");
+			this.socketTimeout = socketTimeout;
+			return this;
+		}
+
 		public Builder defaultOptions(BedrockChatOptions defaultOptions) {
 			Assert.notNull(defaultOptions, "'defaultOptions' must not be null.");
 			this.defaultOptions = defaultOptions;
@@ -867,9 +986,15 @@ public class BedrockProxyChatModel implements ChatModel {
 		public BedrockProxyChatModel build() {
 
 			if (this.bedrockRuntimeClient == null) {
+
+				var httpClientBuilder = ApacheHttpClient.builder()
+					.connectionAcquisitionTimeout(this.connectionAcquisitionTimeout)
+					.connectionTimeout(this.connectionTimeout)
+					.socketTimeout(this.socketTimeout);
+
 				this.bedrockRuntimeClient = BedrockRuntimeClient.builder()
 					.region(this.region)
-					.httpClientBuilder(null)
+					.httpClientBuilder(httpClientBuilder)
 					.credentialsProvider(this.credentialsProvider)
 					.overrideConfiguration(c -> c.apiCallTimeout(this.timeout))
 					.build();
@@ -877,10 +1002,11 @@ public class BedrockProxyChatModel implements ChatModel {
 
 			if (this.bedrockRuntimeAsyncClient == null) {
 
-				// TODO: Is it ok to configure the NettyNioAsyncHttpClient explicitly???
 				var httpClientBuilder = NettyNioAsyncHttpClient.builder()
 					.tcpKeepAlive(true)
-					.connectionAcquisitionTimeout(Duration.ofSeconds(30))
+					.readTimeout(this.asyncReadTimeout)
+					.connectionTimeout(this.connectionTimeout)
+					.connectionAcquisitionTimeout(this.connectionAcquisitionTimeout)
 					.maxConcurrency(200);
 
 				var builder = BedrockRuntimeAsyncClient.builder()
